# robo_ai_turku_2025

./: .gitignore  Instructions.md  README.md
Lab2_Task2/: Task2.txt
Lab3_Group13/: task2.py  task3.py  task5.py  task8.py  task9.py
Lab3_Task5/: Questions.txt  task5.py
Lab3_Task7/: befehle und so.txt
Lab3_Task9/: befehle9.txt
code/: add_two_ints_client.py  add_two_ints_server.py  fibonacci_client.py  fibonacci_client_cancel.py  publisher.py  (+2 more)
ros2_ws/src/custom_interface/: CMakeLists.txt
ros2_ws/src/custom_interface/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
ros2_ws/src/custom_interface/install/custom_interface/include/custom_interface/custom_interface/msg/detail/: task_msg__builder.hpp  task_msg__functions.c  task_msg__type_support.hpp
ros2_ws/src/custom_interface/install/custom_interface/local/lib/python3.10/dist-packages/custom_interface/: _custom_interface_s.ep.rosidl_typesupport_c.c  _custom_interface_s.ep.rosidl_typesupport_introspection_c.c
ros2_ws/src/custom_interface/install/custom_interface/local/lib/python3.10/dist-packages/custom_interface/msg/: __init__.py  _task_msg.py  _task_msg_s.c
ros2_ws/src/custom_interface/install/custom_interface/share/ament_index/resource_index/parent_prefix_path/: custom_interface
ros2_ws/src/custom_interface/install/custom_interface/share/custom_interface/: local_setup.sh  package.sh
ros2_ws/src/custom_interface/install/custom_interface/share/custom_interface/msg/: TaskMsg.idl
ros2_ws/src/custom_interface/log/: latest_build
ros2_ws/src/custom_interface/srv/: CalculateDistance.srv
(+487 files in other folders)
